[tool.poetry]
name = "mdapi"
version = "3.0.0"
description = "A simple API to serve the package repository metadata"
authors = ["Pierre-Yves Chibon <pingou@pingoured.fr>", "Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Pierre-Yves Chibon <pingou@pingoured.fr>", "Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/t0xic0der/mdapi"
repository = "https://github.com/t0xic0der/mdapi"
documentation = "https://github.com/t0xic0der/mdapi/blob/master/README.md"
keywords = ["rpm", "centos", "fedora", "metadata", "repositories"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Web Environment",
	"Framework :: AsyncIO",
	"Framework :: FastAPI",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Operating System :: POSIX :: Linux",
	"Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
	"Topic :: System :: Operating System",
	"Topic :: Software Development",
	"Topic :: System :: Archiving :: Packaging",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
PyYAML = "^6"
SQLAlchemy = "^1.4.25"
fastapi = "^0.70"
uvicorn = "^0.15"
pydantic = "^1.6.2"
aiosqlite = "^0.17.0"
fedora-messaging = "^3.0.0"
mdapi-messages = "^1.0.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
httpx = "^0.18.2"
isort = "^5.9.3"
poetry = "^1.1.13"
pytest = "^6.2.5"
pytest-asyncio = "^0.17"
pytest-black = "^0.3.12"
pytest-cov = "^3"
pytest-flake8 = "^1.0.7"
pytest-isort = "^2"
tox = "^3.24.4"

[tool.pytest.ini_options]
addopts = "--black --cov-config .coveragerc --cov=duffy --cov-report term --cov-report xml --cov-report html --flake8 --isort"
flake8-max-line-length = 100
asyncio_mode = "auto"

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

